# inTeam-Inc

./: .gitignore  .pylintrc  Makefile  README.md  aaaaaa.py  api.py  auth.js  auth.py  callback.html  callback.js  chart.js  config.js  database_script.py  errors.py  file1.csv  gigachat.py  index.html  login.html  login.js  main.js  not_encryption.py  pyproject.toml  sign.html  sign.js  tempCodeRunnerFile.py  test.py  tests.py  text.md  user_info.html
alchemy_authentication_system/: alchemy_db_init.py  alchemy_db_methods.py  auth_system.py  encryption.py  errors.py
api_dev/: api.py  test.py
app/: main.py
app/api/: main.py
app/api/core/: config.py
app/api/crud/: manager.py  operations.py
app/api/db/: base.py  database.db  init_db.py  session.py
app/api/models/: user.py  vk_api.py
app/api/schemas/: hint.py  token.py  user.py
app/api/services/: api.py  gigachat.py  user_service.py
app/api/v1/endpoints/: __init__.py  auth.py  dashboard.py  data.py  token.py  user.py
assets/styles/: style.css
authentication_system/: __init__.py  auth.py  database_script.py
