[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["we1lman <andrey.velma2005@gmail.com>"]
description = ""
name = "inteam-inc"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
bcrypt = "^4.1.2"
fastapi = "^0.110.1"
pylint = "^3.1.0"
python = "^3.11"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
toml-sort = "^0.23.1"
