[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["we1lman <andrey.velma2005@gmail.com>"]
description = ""
name = "inteam-inc"
package-mode = false
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
aiosqlite = "^0.20.0"
bcrypt = "^4.1.2"
fastapi = "^0.110.1"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
passlib = "^1.7.4"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
pylint = "^3.1.0"
python = "^3.11"
python-dotenv = "^1.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.31.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
uvicorn = "^0.29.0"
aiofiles = "^23.2.1"
httpx = "^0.27.0"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
aioresponses = "^0.7.6"
pytest-mock = "^3.14.0"
urllib3 = "1.26.16"
langchain-community = "^0.2.1"
gigachain = "^0.2.0" 
gigachat = "^0.1.27"
gigachain_core = "^0.2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
flake8 = "^7.0.0"
pylint = "^3.1.0"
toml-sort = "^0.23.1"
